Fix header spacing

--- a/assets/css/partials/_header.scss
+++ b/assets/css/partials/_header.scss
@@ -1,4 +1,6 @@
 .site-branding {
+  padding: 0 0 3rem 0;
+
   &__link {
     // height: ms(1);
     display: flex;
